--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "base-64": "^1.0.0",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-
+    "@types/base-64": "^1.0.0"
   }
 }
